# Copyright (c) 2023, G.A. vd. Hoorn
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# author: G.A. vd. Hoorn

[metadata]
name = comet_rpc
version = attr: comet_rpc.__version__
description = "Low-level Python wrapper around the COMET RPC interface on Fanuc R-30iB(+) controllers (V8+)"
license = Apache License, Version 2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/gavanderhoorn/comet_rpc
project_urls =
    Tracker = https://github.com/gavanderhoorn/comet_rpc/issues
    Source = https://github.com/gavanderhoorn/comet_rpc
author = G.A. vd. Hoorn
author_email = g.a.vanderhoorn@tudelft.nl
keywords = fanuc, robotics, r-30ib, rpc, comet
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
setup_requires =
    setuptools>=46.4.0
install_requires =
    importlib-metadata; python_version<"3.8"
    pydantic>=1.10,<2.0
    requests>=2.28,<3.0
    typing_extensions>=4.4,<5.0


[options.packages.find]
where = src
exclude =
    tests


[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .git
    .eggs
    __pycache__
    tests
    build
    dist
